--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,8 +37,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   jaffle_shop:
-    # Applies to all files under models/example/
     marts:
-      materialized: table
+      +materialized: table
     staging:
-      materialized: view
+      +materialized: view
