Add tests for sources

--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -11,7 +11,18 @@ sources:
 
     tables:
       - name: orders
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
+              
       - name: customers
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
         freshness: null
 
   - name: stripe
