--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -16,4 +16,14 @@ models:
       - name: status
         data_tests:
           - accepted_values:
-              values: ['shipped', 'completed', 'return_pending', 'returned', 'placed']
+              values: 
+                - shipped
+                - completed
+                - return_pending
+                - returned
+                - placed
+      - name: customer_id
+        data_tests:
+          - relationships:
+              field: customer_id
+              to: ref('stg_jaffle_shop__customers')
