--- a/models/staging/stripe/_stripe__sources.yml
+++ b/models/staging/stripe/_stripe__sources.yml
@@ -10,5 +10,8 @@ sources:
               warn_after: {count: 24, period: hour}
               error_after: {count: 12, period: day}
         loaded_at_field: _batched_at
-
-    
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
