--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: A clone of a Postgres application database.
     database: raw  
     schema: jaffle_shop
     freshness: # make this a little more strict
@@ -11,15 +12,19 @@ sources:
 
     tables:
       - name: orders
+        description: Raw orders data.
         columns:
           - name: id
+            description: Primary key for orders.
             data_tests:
               - unique
               - not_null
 
       - name: customers
+        description: Raw customers data.
         columns:
           - name: id
+            description: Primary key for customers.
             data_tests:
               - unique
               - not_null
