--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,10 +2,10 @@ version: 2
 
 models:
   - name: stg_jaffle_shop__customers
-    description: one unique customer per row  
+    description: Staged customer data from our jaffle shop app.
     columns:
       - name: customer_id
-        description: primary key
+        description: The primary key for customers.
         data_tests:
           - unique
           - not_null
@@ -13,7 +13,7 @@ models:
     description: one order per row
     columns:
       - name: order_id
-        description: primary key
+        description: Primary key for orders.
         data_tests:
           - unique
           - not_null
@@ -28,6 +28,7 @@ models:
                 - returned
                 - placed
       - name: customer_id
+        description: Foreign key to stg_jaffle_shop__customers.customers_id.
         data_tests:
           - relationships:
               field: customer_id
