--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: jaffle_shop
-    description: A clone of a Postgres application database.
+    description: A clone of a Snowflake application database.
     database: raw  
     schema: jaffle_shop
     freshness: # make this a little more strict
