--- a/models/staging/stripe/stg_stripe.yml
+++ b/models/staging/stripe/stg_stripe.yml
@@ -2,18 +2,22 @@ version: 2
 
 models:
   - name: stg_stripe__payments
+    description: Staged payments data from stripe.
     columns:
       - name: payment_id
+        description: Primary key for payments.
         data_tests:
           - unique
           - not_null
       - name: order_id
+        description: Foreign key to stg_jaffle_shop__customers.customers_id.
         data_tests:
           - not_null
           - relationships:
               field: customer_id
               to: ref('stg_jaffle_shop__customers')
       - name: status
+        description: "{{ doc('payment_status') }}"
         data_tests:
           - accepted_values:
              values:
